# govulncheck-precommit

./: .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
customhooks/: govulncheck.py
