[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "govulncheck-precommit"
version = "0.0.1"
description = "pre-commit hook for govulncheck"
readme = "README.md"
keywords = [
    "pre-commit",
    "govulncehck",
]
license = { file = "LICENSE" }
authors = [{ name = "William De Keyzer"}]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
cli-command = "customhooks.govulncheck:main"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
namespaces = false