[metadata]
name = customhooks
version = 6.0.0
description = Some custom hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WilliamDeKeyzer/govulncheck-precommit
author = William De Keyzer
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15
    tomli>=1.1.0;python_version<"3.11"
python_requires = >=3.9

[options.packages.find]

[options.entry_points]
console_scripts =
    govulncheck = customhooks.govulncheck:main
