[metadata]
name = customhooks
version = 1.0.0
description = Some custom hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WilliamDeKeyzer/govulncheck-precommit
author = William De Keyzer
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    govulncheck = customhooks.govulncheck:main
